CF 4.5 added carousel html on landingpage; added partials: featured products, product slider, productslider indicators; adapted css carousel

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,6 +27,13 @@
         <%= @product.price %>
       </p>
 
+      <p>
+        <strong>Categorie:</strong>
+        <%= @product.categorie_id %>
+      </p>
+
+      
+
     </div>
   </div>
 
