--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -138,7 +138,7 @@ a:hover {
 
 
 //Page styling
-//Index
+//Landing_page
 
 .prod {
   position: relative;
@@ -158,6 +158,7 @@ a:hover {
     background-color: rgba(255,255,255, .9);
     margin-left:-15px;
     color: $shade-color;
+    text-shadow: none;
   }
 
   .prod h5 {
@@ -187,11 +188,26 @@ a:hover {
   }
 
 
+//Carousel
+#carousel-landing-page {
+margin: 30px auto;
+}
 
-// .no-gutter > [class*='col-'] {
-//   padding-right:0;
-//   padding-left:0;
-// }
+.carousel-inner {
+  margin: auto;
+}
+
+.carousel-control {
+  opacity: 0.5;
+}
+
+.carousel-control.right {
+  background-image: none;
+}
+
+.carousel-control.left {
+  background-image: none;
+}  
 
 
 
