--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,15 +8,7 @@
   <div class="row prod-inner">
   
     <% @products.each do |product| %>
-      <div class= "col-sm-3 prod">
-        <%= link_to (image_tag(product.image_url)), product_path(product) %>
-        <header>
-          <h5><%= product.name %></h5>
-        </header>
-        <%= link_to 'Show', product %>
-        <%= link_to 'Edit', edit_product_path(product) %>
-        <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </div>
+      <%= render @products %>
     <% end %>
   
   </div>
