--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,6 +27,16 @@
         <%= @product.price %>
       </p>
 
+      <p>
+        <strong>Colour:</strong>
+        <%= @product.colour %>
+      </p>
+
+      <p>
+        <strong>Categorie:</strong>
+        <%= @product.categorie_id %>
+      </p>
+
     </div>
   </div>
 
