--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -40,13 +40,13 @@
     <%= form.label :colour %><br>
     <%= form.text_field :colour %>
   </div>
-
-<!--   <p>
-    <label for="product_categorie_id">Categorie:</label><br>
+  
+  <div class="field">
+    <%= form.label :categorie_id %><br>
     <%= form.collection_select :categorie_id, Categorie.all, :id, :name, :prompt => "Select a Categorie" %>
     or create one:
     <%= form.text_field :new_categorie_name %>
-  </p> -->
+  </div>
 
   <div class="actions">
     <%= form.submit %>
