added own dynamic generated views for the categories living, lighting and dining at static pages

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,6 +32,10 @@
         <%= @product.colour %>
       </p>
 
+      <p>
+        <strong>Categorie:</strong>
+        <%= @product.categorie.name %>
+      </p>
 
     </div>
   </div>
