--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,22 +31,11 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="nav-collapse-connect">
           <ul class="nav navbar-nav">
-            <li><a href="#">Living</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lighting<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Floor Lamps</a></li>
-                <li><a href="#">Table Lamps</a></li>
-                <li><a href="#">Lamp Accesoires</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Bulbs</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">electricity</a></li>
-              </ul>
-            </li>
+            <li><%= link_to 'Living', static_pages_living_path %></li>
+            <li><%= link_to 'Dining', static_pages_dining_path %></li>
+            <li><%= link_to 'Lighting', static_pages_lighting_path %></li>
+            <li><%= link_to 'All', products_path %></li>
             <li><%= link_to 'About', static_pages_about_path %></li>
-            <li><%= link_to 'Contact', static_pages_contact_path %></li>
-            <li><%= link_to 'Products', products_path %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>
