prevent error product dependencies

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,10 +32,12 @@
         <%= @product.colour %>
       </p>
 
-      <p>
-        <strong>Categorie:</strong>
-        <%= @product.categorie.name %>
-      </p>
+      <% if @product.categorie != nil %>
+      <p> 
+        <strong>Categorie:</strong> 
+        <%= @product.categorie.name %> 
+      </p> 
+      <% end %>
 
     </div>
   </div>
