--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -14,13 +14,13 @@
       <div class="col-sm-2">
         <div class="row">
           <div class="col-xs-12 prod">
-            <%= render partial: "featured_product", locals: {featured_product: @featured_product[0] if @featured_product[0]} %>     
+            <%= render partial: "featured_product", locals: {featured_product: @featured_product[0]} if @featured_product[0] %>     
           </div>
           <div class="col-xs-12 prod">
-            <%= render partial: "featured_product", locals: {featured_product: @featured_product[1] if @featured_product[1]} %>  
+            <%= render partial: "featured_product", locals: {featured_product: @featured_product[1]} if @featured_product[1] %>  
           </div>
           <div class="col-xs-12 prod">
-            <%= render partial: "featured_product", locals: {featured_product: @featured_product[2] if @featured_product[2]} %> 
+            <%= render partial: "featured_product", locals: {featured_product: @featured_product[2]} if @featured_product[2] %> 
           </div><!-- /.col  -->
         </div><!-- /.row  -->
       </div><!-- /.middlecol-level 1 -->
@@ -28,13 +28,13 @@
       <div class="col-sm-4">
         <div class="row">
           <div class="col-xs-6 prod">
-            <%= render partial: "featured_product", locals: {featured_product: @featured_product[3] if @featured_product[3]} %> 
+            <%= render partial: "featured_product", locals: {featured_product: @featured_product[3]} if @featured_product[3] %> 
           </div>
           <div class="col-xs-6 prod">
-            <%= render partial: "featured_product", locals: {featured_product: @featured_product[4] if @featured_product[4]} %>     
+            <%= render partial: "featured_product", locals: {featured_product: @featured_product[4]} if @featured_product[4] %>     
           </div>
           <div class="col-xs-12 prod">
-            <%= render partial: "featured_product", locals: {featured_product: @featured_product[5] if @featured_product[5]} %>   
+            <%= render partial: "featured_product", locals: {featured_product: @featured_product[5]} if @featured_product[5] %>   
           </div>
         </div>
       </div><!-- /.rightcol-level 1 -->
