--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
   <p id="notice"><%= notice %></p>
   <div class="row">
     <div class="col-sm-6">
-        <%= image_tag @product.product_image.url(:full) if @product.product_image? %>
+        <%= image_tag @product.product_image.url if @product.product_image? %>
     </div>
     <div class="col-sm-6">
       <h2><%= @product.name %></h2>
@@ -16,12 +16,6 @@
         <strong>Description:</strong>
         <%= @product.description %>
       </p>
-
-      <p>
-        <strong>Image url:</strong>
-        <%= @product.image_url %>
-      </p>
-
 
       <p>
         <strong>Price:</strong>
