--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,5 +1,6 @@
 <div class= "col-sm-3 prod">
-  <%= link_to (image_tag(product.image_url)), product_path(product) %>
+
+  <%= link_to (image_tag product.product_image.url if product.product_image?), product_path(product) %>
   <header>
     <h5><%= product.name %></h5>
   </header>
