--- a/app/views/static_pages/_product_slider.html.erb
+++ b/app/views/static_pages/_product_slider.html.erb
@@ -1,7 +1,7 @@
 <div class="item<%= " active" if group == @product_slide_groups.first %>">
   <% group.each do |product| %>
   <div class="col-xs-4 prod">
-    <%= link_to (image_tag(product.image_url)), product_path(product) %>
+    <%= link_to (image_tag(product.product_image.url)), product_path(product) %>
     <div class="carousel-caption">
       <h5><%= product.name %></h5>
     </div>
