--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,11 +1,11 @@
 <div class= "col-sm-3 prod">
-  <% if product.product_image.present? %>
-  <%= link_to (image_tag (product.product_image.url)), product_path(product) %>
-  <% end %>
-  <header>
-    <h5><%= product.name %></h5>
-  </header>
-  <%= link_to 'Show', product %>
-  <%= link_to 'Edit', edit_product_path(product) %>
-  <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% if product.product_image? %>
+    <%= link_to (image_tag (product.product_image.url)), product_path(product) %>
+  <% end %>  
+    <header>
+      <h5><%= product.name %></h5>
+    </header>
+    <%= link_to 'Show', product %>
+    <%= link_to 'Edit', edit_product_path(product) %>
+    <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
