--- a/app/views/static_pages/_featured_product.html.erb
+++ b/app/views/static_pages/_featured_product.html.erb
@@ -5,4 +5,6 @@
     <span class="prod-subline"><%= featured_product.price %></span>
   </h5>
 </header>  
-<%= link_to (image_tag(featured_product.product_image.url)), product_path(featured_product) %>  
+<% if featured_product.product_image.present? %>  
+  <%= link_to (image_tag(featured_product.product_image.url)), product_path(featured_product) %> 
+<% end %> 
