--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to 'möbi', static_pages_landing_page_path, class: "navbar-brand" %>
+          <%= link_to 'möbi', home_path, class: "navbar-brand" %>
         </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
