--- a/app/views/static_pages/_featured_product.html.erb
+++ b/app/views/static_pages/_featured_product.html.erb
@@ -6,5 +6,5 @@
   </h5>
 </header>  
 <% if featured_product.product_image.present? %>  
-  <%= link_to (image_tag(featured_product.product_image.url)), product_path(featured_product) %> 
+  <%= link_to (image_tag(featured_product.product_image.url)), product_path(featured_product.id) %> 
 <% end %> 
