--- a/app/views/static_pages/dining.html.erb
+++ b/app/views/static_pages/dining.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
-
+  
 
   <h1>Dining</h1>
-
+  <p id="notice"><%= @category_notice %></p>
+  
 
   <div class="row">
+
   
     <% @dining_products.each do |product| %>
       <%= render partial: "shared/product", locals: {product: product} %>
