--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -62,7 +62,7 @@ a:hover {
 }
 
 .anchor-bottom {
-  height: 150px;
+  height: 155px;
 }
 
 
@@ -113,7 +113,10 @@ a:hover {
 
 .searchform {
   margin-top: 20px;
+  width: 100%;
 }
+
+
 
 .footer-nav-btn {
   text-align: center;
