--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-<p id="notice"><%= notice %></p>
+  <p id="notice"><%= notice %></p>
 
-<h1>Articles</h1>
+  <h1>Articles</h1>
 
-<div class="row">
+  <div class="row">
   
     <% @articles.each do |article| %>
       <div class= "col-sm-3">
@@ -11,16 +11,33 @@
         <header>
           <h5><%= article.title %></h5>
         </header>
-        <%= link_to 'Show', article %>
-        <%= link_to 'Edit', edit_article_path(article) %>
-        <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+        <div class="btn-group">  
+          <%= link_to article, class: 'btn btn-default btn-xs' do %>
+            <i class="glyphicon glyphicon-eye-open"></i>
+          <% end %>
+
+          <%= link_to edit_article_path(article), class: 'btn btn-default btn-xs' do %>
+            <i class="glyphicon glyphicon-pencil"></i>
+          <% end %>
+
+          <%= link_to article, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default btn-xs' do %>
+            <i class="glyphicon glyphicon-remove"></i>
+          <% end %>
+        </div>
+
+
       </div>
     <% end %>
   
   </div>
 
 
-<br>
+  <div class="btn-control-group">
+    <%= link_to new_article_path, class: 'btn btn-default' do %>
+      <i class="glyphicon glyphicon-plus"></i> New Article
+    <% end %>
+  </div>
 
-<%= link_to 'New Article', new_article_path %>
+
 </div>
