--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -23,6 +23,18 @@
     </div>
   </div>
 
-  <%= link_to 'Edit', edit_article_path(@article) %> |
-  <%= link_to 'Back', articles_path %>
+  <div class="btn-control-group">
+  <%= link_to articles_path, class: 'btn btn-default' do %>
+    <i class="glyphicon glyphicon-arrow-left"></i> Back
+  <% end %>
+
+  <%= link_to edit_article_path(@article), class: 'btn btn-default' do %>
+    <i class="glyphicon glyphicon-pencil"></i> Edit
+  <% end %>
+
+  <%= link_to @article, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' do %>
+    <i class="glyphicon glyphicon-remove"></i> Destroy
+  <% end %>  
+</div> 
+
 </div>
