--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,66 +12,89 @@
   <% end %>
 
   <div class="row">
-    <div class="col-sm-6">
-      <div class="form-group">
-        <%= form.label :name %><br>
-        <%= form.text_field :name, id: :product_name, :size => 50 %>
-      </div>
-
-      <div class="form-group">
-        <%= form.label :teaser %><br>
-        <%= form.text_area :teaser, id: :product_teaser, :cols => "50", :rows => "5"  %>
-      </div>
-
-      <div class="form-group">
-        <%= form.label :description %><br>
-        <%= form.text_area :description, id: :product_description, :cols => "50", :rows => "15" %>
-      </div>
-
-  </div>
-    <div class="col-sm-6">  
-      <div class="form-group">
-        <%= form.label :product_image %><br>
-        <%= form.file_field :product_image %>
-        <% if form.object.product_image? %>
-        <div class="row">
-          <div class="col-sm-4">
-            <br>
-            <%= image_tag(product.product_image.thumb.url) %>
-            <br>
-          </div>
-        </div>
-        <div class="form-check">
-          <br>
-          <%= form.check_box :remove_product_image %>
-          <%= form.label :remove_product_image, class: "form-check-label" %>
-        </div>      
-        <% end %>
-      </div>
-      <div class="form-group">
-        <%= form.label :price %><br>
-        <%= form.text_field :price %>
-      </div>
-
-      <div class="form-group">
-        <%= form.label :colour %><br>
-        <%= form.text_field :colour %>
-      </div>
-
-      <div class="form-group">
-        <%= form.label :categorie_id %><br>
-        <%= form.collection_select :categorie_id, Categorie.all, :id, :name, :prompt => "Select a Categorie" %>
-        or create one:
-        <%= form.text_field :new_categorie_name %>
-      </div>
-
-
-    </div><!-- end of col -->
-    <div class="col-sm-12">
-      <div class="actions">
-        <%= form.submit %>
+    <div class="form-group col-sm-6">
+      <%= form.label :name, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= form.text_field :name, id: :product_name, class: "form-control" %>
       </div>
     </div>
 
+    <div class="form-group col-sm-6" >
+      <%= form.label :teaser, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= form.text_area :teaser, id: :product_teaser, rows:"4", class: "form-control"  %>
+      </div>
+    </div> 
+
+
+    <div class="form-group col-sm-6">
+      <%= form.label :description, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= form.text_area :description, id: :product_description, class: "form-control", rows:"10" %>
+      </div>
+    </div>
+
+    <div class="form-group col-sm-6">
+      <%= form.label :price, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= form.text_field :price, class: "form-control" %>
+      </div>  
+    </div>
+
+    <div class="form-group col-sm-6">
+      <%= form.label :colour, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= form.text_field :colour, class: "form-control" %>
+      </div>  
+    </div>
+
+    <div class="form-group col-sm-6">
+      <%= form.label :categorie_id, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <%= form.collection_select :categorie_id, Categorie.all, :id, :name, options = {:prompt => "Select a Categorie"}, html_options = { class: "form-control"} %>
+      </div>
+    </div>
+
+    <div class="form-group col-sm-6">  
+      <label class="col-xs-12 control-label">
+        or create new categorie:
+      </label>  
+      <div class="col-xs-12">
+        <%= form.text_field :new_categorie_name, class: "form-control" %>
+      </div>
+    </div>
+  </div><!-- end of row -->  
+
+  <div class="row" >
+      <% if form.object.product_image? %>
+        <div class="form-group col-sm-6" >
+          <%= image_tag(product.product_image.thumb.url, class: "col-xs-6 col-sm-offset-3 form-image") %>
+          <div class="form-check col-xs-12 col-sm-offset-3">
+            <%= form.check_box :remove_product_image %>
+            <%= form.label :remove_product_image, class: "form-check-label" %>
+          </div>
+        </div>   
+      <% end %>
+    <div class="form-group col-sm-6" >
+      <%= form.label :product_image, class: "col-sm-3 control-label" %>
+      <div class="col-sm-9">
+        <label class="btn btn-default btn-file">
+          Upload File
+          <%= form.file_field :product_image %>
+        </label>
+      </div>
+    </div>
   </div><!-- end of row -->
+  
+  <div class="row" >
+    <div class="col-sm-12">
+      <div class="actions form-group">  
+          <%= button_tag(type: "submit", class: "btn btn-default btn-control-group") do %>
+            <i class=" glyphicon glyphicon-ok"></i> Submit
+          <% end %>
+      </div>
+    </div>
+  </div><!-- end of row -->
+
+
 <% end %>
