--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -3,6 +3,16 @@
 
   <%= render 'form', product: @product %>
 
-  <%= link_to 'Show', @product %> |
-  <%= link_to 'Back', products_path %>
+
+
+  <div class="btn-control-group">
+    <%= link_to products_path, class: 'btn btn-default' do %>
+      <i class="glyphicon glyphicon-arrow-left"></i> Back
+    <% end %>
+
+    <%= link_to @product, class: 'btn btn-default' do %>
+      <i class="glyphicon glyphicon-eye-open"></i> Show Product Page
+    <% end %>
+  </div>  
+
 </div>
