--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,6 +2,10 @@
   <h1>New Product</h1>
 
   <%= render 'form', product: @product %>
-
-  <%= link_to 'Back', products_path %>
+  
+  <div class="btn-control-group">
+    <%= link_to products_path, class: 'btn btn-default' do %>
+      <i class="glyphicon glyphicon-arrow-left"></i> Back
+    <% end %>
+  </div>  
 </div>
