--- a/app/views/static_pages/_product_slider.html.erb
+++ b/app/views/static_pages/_product_slider.html.erb
@@ -1,12 +1,14 @@
 <div class="item<%= " active" if group == @product_slide_groups.first %>">
   <% group.each do |product| %>
-  <div class="col-xs-4 prod">
-    <% if product.product_image? %>
-      <%= link_to (image_tag(product.product_image.url)), product_path(product) %>
-    <% end %>  
-    <div class="carousel-caption">
-      <h5><%= product.name %></h5>
+    <div class="col-xs-4 prod">
+      <%= link_to product_path(product) do %>
+        <% if product.product_image? %>
+          <%= image_tag(product.product_image.url) %>
+        <% end %>  
+        <div class="carousel-caption">
+          <h5><%= product.name %></h5>
+        </div>
+      <% end %>
     </div>
-  </div>
   <% end %>
 </div>
