--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,12 +1,7 @@
 <div class="container">
   <h1>Get in touch</h1>
 
-  <p>
-    For quick and hassle-free support, please contact us through Live Chat (English only), available 24/7. 
-  </p>
-  <p>
-    Alternatively, you can reach us through our Contact Form, we will reply within 24 hours.
-  </p>
+  <%= render 'form' %>
 
   <h2>Adress</h2>
   <p>Happy Lane 0815</p>
