CF 5.3 | fix contact page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
             <li><%= link_to 'Lighting', static_pages_lighting_path %></li>
             <li><%= link_to 'All', products_path %></li>
             <li><%= link_to 'Trendscout', articles_path %></li>
+            <li><%= link_to 'contact', static_pages_contact_path %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-user"></span></a></li>
