--- a/app/views/user_mailer/contact_form.html.erb
+++ b/app/views/user_mailer/contact_form.html.erb
@@ -37,7 +37,7 @@
         
 
         <tr>  
-          <td bgcolor="#ffffff" style="padding: 40px 30px 30px 30px;">
+          <td bgcolor="#e3f5fc" style="padding: 40px 30px 30px 30px;">
             <table border="0" cellpadding="0" cellspacing="0" width="100%">
 
               <tr>
@@ -116,7 +116,7 @@
         </tr>
 
         <tr> 
-          <td align="center" bgcolor="#fcdbdb" style="padding: 30px 30px 30px 30px;">
+          <td align="center" bgcolor="#f78383" style="padding: 30px 30px 30px 30px;">
 
             <table border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr>
