--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,7 +9,7 @@ $primary-color: rgba(255, 255, 255, 1);
 $secondary-color: rgba(175, 171, 165, 1);
 $shade-color: rgba(114, 158, 161, 1);
 $text-color: rgba(87,85,82, 1);
-$highlight-color: rgba(246, 254, 219, 1);
+$highlight-color: rgba(61, 198, 187, 1);
 $emphasis-color: rgba(172, 215, 236, 1);
 
 
@@ -51,7 +51,7 @@ a:visited {
 }
 
 a:hover {
-  color: $emphasis-color;
+  color: $highlight-color;
 }
 
 
@@ -62,7 +62,7 @@ a:hover {
 }
 
 .anchor-bottom {
-  height: 155px;
+  height: 220px;
 }
 
 
@@ -84,7 +84,7 @@ a:hover {
 .navbar-default .navbar-nav>li>a {
   transition: all .3s linear .1s;
   color: $primary-color;
-  font-size: 0.9em;
+  font-size: .9em;
   font-weight: normal;
   text-transform: uppercase;
   letter-spacing: .2em;
@@ -93,9 +93,25 @@ a:hover {
   .navbar-default .navbar-nav>li>a:active,
   .navbar-default .navbar-nav>li>a:focus {
   color: $secondary-color;
-  box-shadow: 0 -50px $primary-color inset;
+  box-shadow: 0 -52px $primary-color inset;
   outline-style: none;
   }
+
+.navbar-right .user-nav,
+.navbar-right li.user-nav a {
+  letter-spacing: 0.1em;
+ }
+
+ .navbar-right {
+  font-size: 90%;
+ }
+
+.navbar-main .glyphicon {
+  font-size: 110%;
+  line-height: 1.2em;
+}
+
+
 
 //Sticky Footer
 .footer {
@@ -214,9 +230,142 @@ margin: 30px auto;
 
 
 
+//Error explanation
+#error_explanation h2 {
+  font-weight: 400; 
+  font-size: 150%;
+  margin-bottom: 10px;
+}
 
 
+//Form User Login
+.form-signin {
+  max-width: 330px;
+  padding: 25px;
+  margin: 0 auto;
+  background-color: rgba(114, 158, 161, 0.4);
+  box-shadow:
+    0 0 0 2px $primary-color,
+    0 0 0 20px rgba(114, 158, 161, 0.4);
+}
+
+.form-signin-heading {
+  color: $primary-color; 
+}
+
+.brand {
+  width: 90px;
+  border: 2px solid $primary-color;
+  padding: 5px;
+  font-weight: 400; 
+  margin: 30px auto;
+  font-size: 180%;
+}
+
+.form-signin-heading h3 {
+  font-size: 150%;
+}
+
+.form-signin .form-signin-heading,
+.form-signin .checkbox,
+.form-signin .btn-block {
+  margin-bottom: 30px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
+}
+
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.form-signin input[type="checkbox"] {
+  margin-left: 0;
+}
+
+.form-signin .btn-default {
+  color: $shade-color;
+}
 
 
+.form-signin .btn-default:hover {
+  color: $primary-color;
+  background-color: $shade-color;
+}
+
+.form-signin-links {
+  color: $primary-color;
+}
+
+//Form Edit User
+.form-user-edit {
+  background-color: rgba(114, 158, 161, 0.4);
+  padding: 25px;
+  max-width: 500px;
+}
+
+.form-user-edit .row {
+  border: 2px solid $primary-color;
+  margin:0;
+}
 
 
+.form-user-edit .form-group {
+  min-height: 50px;
+  margin-bottom: 30px;
+}
+
+
+.form-user-edit .glyphicon-user {
+  color: $primary-color;
+  font-size: 240%;
+}
+
+.form-user-edit .circle {
+  width: 60px;
+  height: 60px; 
+  padding-top: 10px;
+  margin: 30px auto;
+  border: 2px solid $primary-color;
+  border-radius: 50%;
+  text-align: center;
+
+}
+
+.form-user-edit h2 {
+  color: $primary-color;
+  margin-bottom: 30px;
+}
+
+.form-user-edit .btn-block {
+  margin-bottom: 30px;
+}
+
+
+.form-user-edit .btn-default:hover {
+  color: $primary-color;
+  background-color: $shade-color;
+}
+
+.form-user-edit .btn-default {
+  color: $shade-color;
+}
