--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -238,8 +238,9 @@ margin: 30px auto;
 }
 
 
-//Form User Login
-.form-signin {
+//Form User Login Edit Signup
+.form-signin,
+.form-signup {
   max-width: 330px;
   padding: 25px;
   margin: 0 auto;
@@ -249,9 +250,14 @@ margin: 30px auto;
     0 0 0 20px rgba(114, 158, 161, 0.4);
 }
 
-.form-signin-heading {
+.form-heading,
+.form-heading {
   color: $primary-color; 
-}
+}  
+
+  .form-heading h3 {
+    font-size: 150%;
+  }
 
 .brand {
   width: 90px;
@@ -262,20 +268,24 @@ margin: 30px auto;
   font-size: 180%;
 }
 
-.form-signin-heading h3 {
-  font-size: 150%;
-}
 
-.form-signin .form-signin-heading,
+
+.form-user-edit .btn-block,
+.form-signin .form-heading,
 .form-signin .checkbox,
-.form-signin .btn-block {
+.form-signin .btn-block,
+.form-signup .form-heading,
+.form-signup .btn-block {
   margin-bottom: 30px;
 }
+
 .form-signin .checkbox {
   font-weight: normal;
 }
 
-.form-signin .form-control {
+.form-user-edit .form-control,
+.form-signin .form-control,
+.form-signup .form-control {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
@@ -284,7 +294,9 @@ margin: 30px auto;
   padding: 10px;
   font-size: 16px;
 }
-.form-signin .form-control:focus {
+
+.form-signin .form-control:focus,
+.form-signup .form-control:focus {
   z-index: 2;
 }
 .form-signin input[type="email"] {
@@ -302,21 +314,13 @@ margin: 30px auto;
   margin-left: 0;
 }
 
-.form-signin .btn-default {
-  color: $shade-color;
-}
 
-
-.form-signin .btn-default:hover {
-  color: $primary-color;
-  background-color: $shade-color;
-}
 
 .form-signin-links {
   color: $primary-color;
 }
 
-//Form Edit User
+
 .form-user-edit {
   background-color: rgba(114, 158, 161, 0.4);
   padding: 25px;
@@ -328,9 +332,8 @@ margin: 30px auto;
   margin:0;
 }
 
-
-.form-user-edit .form-group {
-  min-height: 50px;
+.form-signup .form-control,
+.form-user-edit .form-control {
   margin-bottom: 30px;
 }
 
@@ -356,16 +359,16 @@ margin: 30px auto;
   margin-bottom: 30px;
 }
 
-.form-user-edit .btn-block {
-  margin-bottom: 30px;
-}
 
-
+.form-signin .btn-default:hover,
+.form-signup .btn-default:hover,
 .form-user-edit .btn-default:hover {
   color: $primary-color;
   background-color: $shade-color;
 }
 
+.form-signin .btn-default,
+.form-signup .btn-default,
 .form-user-edit .btn-default {
   color: $shade-color;
 }
