--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,49 @@
 <div class="container">
-  <h2>Sign up</h2>
+  <div class="form-signup">
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true %>
+    <h2 class="form-heading text-center brand">möbi</h2>
+      <h3 class="form-heading text-center">
+        Welcome &amp;
+        Sign up to the modern design living experience!
+      </h3>
+
+    <div class="form-group">
+      <%= f.label :email, class: "control-label col-sm-12" %>
+      <div class="col-sm-12">
+        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "off" %>
+    <div class="form-group">
+      <%= f.label :password, class: "control-label col-sm-12" %>
+
+      <div class="col-sm-12">
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %>
+        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+
+      </div>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <div class="form-group">
+      <%= f.label :password_confirmation, class: "control-label col-sm-12" %>
+      <div class="col-sm-12">
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+      </div>
     </div>
 
-    <div class="actions">
-      <%= f.submit "Sign up" %>
+    <div class="actions col-sm-12">
+      <%= f.submit "Sign up", class: "btn btn-lg btn-default btn-block" %>
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
-
+  <div class="form-signin-links text-center">
+    <%= render "devise/shared/links" %>
+  </div>
+  
+  </div>
 </div>
