Feature: Add redirect to email confirmation is sent- page after sign up

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,8 +6,7 @@
 
     <h2 class="form-heading text-center brand">möbi</h2>
       <h3 class="form-heading text-center">
-        Welcome &amp;
-        Sign up to the modern design living experience!
+        Join the modern design living experience now!
       </h3>
 
     <div class="form-group">
