--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,18 +1,28 @@
 <div class="container">
-  <h2>Resend confirmation instructions</h2>
+  <div class="form-signup">
 
-  <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-    <%= devise_error_messages! %>
+    <h2 class="form-heading text-center brand">möbi</h2>
+    <h3 class="form-heading text-center">
+      Resend confirmation instructions
+    </h3>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+    <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
+
+      <div class="form-group">
+        <%= f.label :email, class: "control-label col-sm-12" %>
+        <div class="col-sm-12">
+          <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="actions col-sm-12">
+        <%= f.submit "Resend instructions", class: "btn btn-lg btn-default btn-block" %>
+      </div>
+    <% end %>
+  
+    <div class="form-signin-links text-center">
+      <%= render "devise/shared/links" %>
     </div>
-
-    <div class="actions">
-      <%= f.submit "Resend confirmation instructions" %>
-    </div>
-  <% end %>
-
-  <%= render "devise/shared/links" %>
+  </div>
 </div>
