--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,27 +1,41 @@
-<div class="container">  
-  <h2>Change your password</h2>
+<div class="container">
+  <div class="form-signup text-center">
 
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-    <%= devise_error_messages! %>
-    <%= f.hidden_field :reset_password_token %>
+    <h2 class="form-heading brand">möbi</h2>
+    <h3 class="form-heading">Change your password</h3>
 
-    <div class="field">
-      <%= f.label :password, "New password" %><br />
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-      <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-    </div>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
+      <%= f.hidden_field :reset_password_token %>
 
-    <div class="field">
-      <%= f.label :password_confirmation, "Confirm new password" %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
-    </div>
+      <div class="form-group">
+        <%= f.label :password, "New password", class: "control-label col-sm-12" %>
 
-    <div class="actions">
-      <%= f.submit "Change my password" %>
-    </div>
-  <% end %>
+        <div class="col-sm-12">
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+          <%= f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control"  %>
+        </div> 
 
-  <%= render "devise/shared/links" %>
- </div> 
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password_confirmation, "Confirm new password", class: "control-label col-sm-12"  %>
+        <div class="col-sm-12">
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="actions col-sm-12">
+        <%= f.submit "Change my password", class: "btn btn-lg btn-default btn-block" %>
+      </div>
+    <% end %>
+
+
+  <div class="form-signin-links text-center">
+    <%= render "devise/shared/links" %>
+  </div>
+
+  </div>
+</div>
