--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,27 @@
-<div class="container">	
-	<h2>Forgot your password?</h2>
+<div class="container"> 
+  <div class="form-signup text-center">
 
-	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-	  <%= devise_error_messages! %>
+    <h2 class="form-heading brand">möbi</h2>
+    <h3 class="form-heading">Forgot your password?</h3>
 
-	  <div class="field">
-	    <%= f.label :email %><br />
-	    <%= f.email_field :email, autofocus: true %>
-	  </div>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
 
-	  <div class="actions">
-	    <%= f.submit "Send me reset password instructions" %>
-	  </div>
-	<% end %>
+      <div class="form-group">
+        <%= f.label :email, class: "control-label col-sm-12"  %>
+        <div class="col-sm-12">
+          <%= f.email_field :email, autofocus: true, class: "form-control" %> %>
+        </div>
+      </div>
 
-	<%= render "devise/shared/links" %>
+      <div class="actions col-sm-12">
+        <%= f.submit "Send me reset password instructions", class: "btn btn-lg btn-default btn-block" %>
+      </div>
+    <% end %>
+    
+    <div class="form-signin-links text-center">
+      <%= render "devise/shared/links" %>
+    </div>
+
+  </div>
 </div>
