Polished layout devise views

--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -17,7 +17,7 @@
       </div>
 
       <div class="actions col-sm-12">
-        <%= f.submit "Resend unlock instructions", class: "btn btn-lg btn-default btn-block" %>
+        <%= f.submit "Resend instructions", class: "btn btn-lg btn-default btn-block" %>
       </div>
     <% end %>
 
