--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,9 +8,9 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
-        <%= f.label :email, class: "control-label col-sm-12"  %>
+        <%= f.label :email, class: "sr-only"  %>
         <div class="col-sm-12">
-          <%= f.email_field :email, autofocus: true, class: "form-control" %>
+          <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "Email address" %>
         </div>
       </div>
 
