Feature: add First name and Last name registration to Devise registration Cntroller. Name can be added under edit registration view

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -324,16 +324,15 @@ margin: 30px auto;
 .form-user-edit {
   background-color: rgba(114, 158, 161, 0.4);
   padding: 25px;
-  max-width: 500px;
 }
 
-.form-user-edit .row {
+.inner {
   border: 2px solid $primary-color;
-  margin:0;
+  margin: 0;
 }
 
 .form-signup .form-control,
-.form-user-edit .form-control {
+.form-user-edit .form-group {
   margin-bottom: 30px;
 }
 
