--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,14 +9,14 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="form-group">
+      <div class="form-group row">
         <%= f.label :email, class: "control-label col-sm-12" %>
         <div class="col-sm-12">
           <%= f.email_field :email, autofocus: true, class: "form-control" %>
         </div>
       </div>
 
-      <div class="form-group">
+      <div class="form-group row">
         <%= f.label :password, class: "control-label col-sm-12" %>
 
         <div class="col-sm-12">
@@ -27,7 +27,7 @@
         </div>
       </div>
 
-      <div class="form-group">
+      <div class="form-group row">
         <%= f.label :password_confirmation, class: "control-label col-sm-12" %>
         <div class="col-sm-12">
           <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
