Fix Layout alerts and forms devise views

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="form-signup">
+<div class="container form-signup">
+  <div class="row">
 
     <h2 class="form-heading text-center brand">möbi</h2>
     <h3 class="form-heading text-center">
