--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
     
     <% if alert %>
       <div class="container alert alert-warning alert-dismissible" role="alert">
-        <p class="alert"><%= alert %></p>
+        <p><%= alert %></p>
       </div>
     <% end %>
 
