--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -111,6 +111,10 @@ a:hover {
   line-height: 1.2em;
 }
 
+.alert {
+  margin: 20px auto;
+}
+
 
 
 //Sticky Footer
@@ -245,9 +249,6 @@ margin: 30px auto;
   padding: 25px;
   margin: 0 auto;
   background-color: rgba(114, 158, 161, 0.4);
-  box-shadow:
-    0 0 0 2px $primary-color,
-    0 0 0 20px rgba(114, 158, 161, 0.4);
 }
 
 .form-heading,
@@ -327,6 +328,8 @@ margin: 30px auto;
   max-width: 500px;
 }
 
+.form-signin .row,
+.form-signup .row,
 .form-user-edit .row {
   border: 2px solid $primary-color;
   margin:0;
@@ -337,6 +340,19 @@ margin: 30px auto;
   margin-bottom: 30px;
 }
 
+
+.form-signin .btn-default:hover,
+.form-signup .btn-default:hover,
+.form-user-edit .btn-default:hover {
+  color: $primary-color;
+  background-color: $shade-color;
+}
+
+.form-signin .btn-default,
+.form-signup .btn-default,
+.form-user-edit .btn-default {
+  color: $shade-color;
+}
 
 .form-user-edit .glyphicon-user {
   color: $primary-color;
@@ -357,18 +373,4 @@ margin: 30px auto;
 .form-user-edit h2 {
   color: $primary-color;
   margin-bottom: 30px;
-}
-
-
-.form-signin .btn-default:hover,
-.form-signup .btn-default:hover,
-.form-user-edit .btn-default:hover {
-  color: $primary-color;
-  background-color: $shade-color;
-}
-
-.form-signin .btn-default,
-.form-signup .btn-default,
-.form-user-edit .btn-default {
-  color: $shade-color;
 }
