--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="form-signup text-center">
+<div class="container form-authentication form-small">
+  <div class="row form-authentication-inner">
 
     <h2 class="form-heading brand">möbi</h2>
     <h3 class="form-heading">Change your password</h3>
@@ -8,7 +8,7 @@
       <%= devise_error_messages! %>
       <%= f.hidden_field :reset_password_token %>
 
-      <div class="form-group">
+      <div class="form-group row">
         <%= f.label :password, "New password", class: "control-label col-sm-12" %>
 
         <div class="col-sm-12">
@@ -20,20 +20,20 @@
 
       </div>
 
-      <div class="form-group">
+      <div class="form-group row">
         <%= f.label :password_confirmation, "Confirm new password", class: "control-label col-sm-12"  %>
         <div class="col-sm-12">
           <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
         </div>
       </div>
 
-      <div class="actions col-sm-12">
+      <div class="actions">
         <%= f.submit "Change my password", class: "btn btn-lg btn-default btn-block" %>
       </div>
     <% end %>
 
 
-  <div class="form-signin-links text-center">
+  <div class="link-group">
     <%= render "devise/shared/links" %>
   </div>
 
