--- a/app/views/devise/registrations/confirmation_is_sent.html.erb
+++ b/app/views/devise/registrations/confirmation_is_sent.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="form-signup text-center">
+<div class="container form-authentication form-small">
+  <div class="row form-authentication-inner">
 
     <h2 class="form-heading brand">möbi</h2>
     <h3 class="form-heading">
@@ -13,7 +13,7 @@
     </p>
 
 
-    <div class="form-signin-links text-center">
+    <div class="link-group">
       <%= render "devise/shared/links" %>
     </div>
   
