Change layout of alerts and notice CanCanCan

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <div class="container">	
-	<p id="notice"><%= notice %></p>
+	<% if notice %>
+      <div class="container alert alert-info" role="alert">
+        <p class="notice"><%= notice %></p>
+      </div>
+    <% end %>  
 
 	<p>
 	  <strong>First name:</strong>
