--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,13 +46,13 @@
     </nav>
     
     <% if notice %>
-      <div class="container alert alert-info alert-dismissible" role="alert">
+      <div class="container alert alert-info" role="alert">
         <p class="notice"><%= notice %></p>
       </div>
     <% end %>  
     
     <% if alert %>
-      <div class="container alert alert-warning alert-dismissible" role="alert">
+      <div class="container alert alert-warning" role="alert">
         <p><%= alert %></p>
       </div>
     <% end %>
