--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,10 @@
 <div class="container">  
-  <p id="notice"><%= notice %></p>
+
+  <% if notice %>
+    <div class="container alert alert-info" role="alert">
+      <p class="notice"><%= notice %></p>
+    </div>
+  <% end %>  
 
   <h1>Users</h1>
 
